# pointlessutils

./: README.md  pyproject.toml
pointlessutils/: __init__.py  decorators.py
