[tool.poetry]
name = "pointlessutils"
version = "0.1.5"
description = "Pointless utilities for python."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
repository = "https://github.com/vcokltfre/pointlessutils"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
